--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "classnames": "^2.2.5",
     "planet-css": "^0.9.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "sentence-case": "^2.1.0"
   }
 }
