Use react-redux

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "planet-css": "^0.9.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "sentence-case": "^2.1.0",
     "upper-case-first": "^1.1.2"
