--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
+    "redux-undo": "^0.6.1",
     "sentence-case": "^2.1.0",
     "upper-case-first": "^1.1.2"
   }
