--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "bytes": "^2.4.0",
     "classnames": "^2.2.5",
     "planet-css": "^0.9.0",
     "react": "^15.4.1",
