--- a/package.json
+++ b/package.json
@@ -11,28 +11,11 @@
     "start": "gulp dev",
     "lint": "eslint src gulpfile.js"
   },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "ignore": "node_modules",
-          "plugins": [
-            "transform-runtime"
-          ],
-          "presets": [
-            "es2015",
-            "react"
-          ]
-        }
-      ]
-    ]
-  },
   "eslintConfig": {
     "extends": "planet/react"
   },
   "devDependencies": {
-    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
@@ -49,6 +32,8 @@
     "gulp-util": "^3.0.7",
     "less-plugin-autoprefix": "^1.5.1",
     "less-plugin-clean-css": "^1.5.1",
+    "livereactload": "^3.1.1",
+    "react-proxy": "^1.1.8",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
