--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browser-sync": "^2.16.0",
     "browserify": "^13.1.0",
     "del": "^2.2.2",
+    "envify": "^4.0.0",
     "eslint": "^3.5.0",
     "eslint-config-planet": "^9.0.0",
     "eslint-plugin-react": "^6.7.1",
