--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bytes": "^2.4.0",
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
+    "mime": "^1.3.4",
     "planet-css": "^0.9.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
@@ -53,6 +54,7 @@
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "sentence-case": "^2.1.0",
+    "uniqid": "^4.1.1",
     "upper-case-first": "^1.1.2"
   }
 }
