--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
     "mime": "^1.3.4",
+    "moment": "^2.17.1",
     "planet-css": "^1.1.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
