Remove viewer build step from dev

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "scrolly-viewer",
+  "name": "scrolly",
   "version": "0.0.0",
-  "description": "Scrolly Viewer",
+  "description": "Scrolly",
   "author": {
     "name": "Trevor Blades",
     "email": "tdblades@gmail.com"
