--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "eslint": "^3.5.0",
     "eslint-config-planet": "^9.0.0",
     "eslint-plugin-react": "^6.7.1",
+    "event-stream": "^3.3.4",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-less": "^3.1.0",
-    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
