--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "eslint-config-planet": "^9.0.0",
     "eslint-plugin-react": "^6.7.1",
     "event-stream": "^3.3.4",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "^3.9.1",
     "gulp-less": "^3.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0",
@@ -64,6 +64,7 @@
     "less-plugin-clean-css": "^1.5.1",
     "livereactload": "^3.1.1",
     "react-proxy": "^1.1.8",
+    "run-sequence": "^1.2.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
