--- a/package.json
+++ b/package.json
@@ -81,10 +81,9 @@
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "redux-undo": "^0.6.1",
-    "request": "^2.79.0",
-    "request-promise": "^4.1.1",
     "sentence-case": "^2.1.0",
     "uniqid": "^4.1.1",
-    "upper-case-first": "^1.1.2"
+    "upper-case-first": "^1.1.2",
+    "whatwg-fetch": "^2.0.1"
   }
 }
