--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
     "redux-undo": "^0.6.1",
     "sentence-case": "^2.1.0",
     "uniqid": "^4.1.1",
