Move to eslint-config-knoword

--- a/package.json
+++ b/package.json
@@ -8,39 +8,9 @@
   },
   "license": "UNLICENSED",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "eslint src gulpfile.js",
     "start": "gulp dev",
-    "dist": "NODE_ENV=production gulp dist",
-    "viewer": "NODE_ENV=viewer gulp viewer",
-    "lint": "eslint src gulpfile.js"
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "react"
-    ],
-    "env": {
-      "development": {
-        "plugins": [
-          [
-            "react-transform",
-            {
-              "transforms": [
-                {
-                  "transform": "livereactload/babel-transform",
-                  "imports": [
-                    "react"
-                  ]
-                }
-              ]
-            }
-          ]
-        ]
-      }
-    }
-  },
-  "eslintConfig": {
-    "extends": "planet/react"
+    "dist": "NODE_ENV=production gulp dist"
   },
   "devDependencies": {
     "babel-plugin-react-transform": "^2.0.2",
@@ -49,11 +19,11 @@
     "babelify": "^7.3.0",
     "browser-sync": "^2.16.0",
     "browserify": "^13.1.0",
+    "connect-history-api-fallback": "^1.3.0",
     "del": "^2.2.2",
     "envify": "^4.0.0",
     "eslint": "^3.5.0",
-    "eslint-config-planet": "^9.0.0",
-    "eslint-plugin-react": "^6.7.1",
+    "eslint-config-knoword": "^1.7.0",
     "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
     "gulp-less": "^3.1.0",
@@ -84,6 +54,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-undo": "^0.6.1",
     "sentence-case": "^2.1.0",
+    "shortid": "^2.2.8",
     "uniqid": "^4.1.1",
     "upper-case-first": "^1.1.2",
     "whatwg-fetch": "^2.0.1"
