--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "start": "gulp dev",
     "dist": "NODE_ENV=production gulp dist"
   },
+  "eslintConfig": {
+    "extends": "knoword/react"
+  },
   "devDependencies": {
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-2": "^6.24.1",
     "babelify": "^7.3.0",
     "browser-sync": "^2.16.0",
     "browserify": "^13.1.0",
@@ -23,7 +28,7 @@
     "del": "^2.2.2",
     "envify": "^4.0.0",
     "eslint": "^3.5.0",
-    "eslint-config-knoword": "^1.7.0",
+    "eslint-config-knoword": "^1.8.0",
     "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
     "gulp-less": "^3.1.0",
