--- a/.babelrc
+++ b/.babelrc
@@ -10,25 +10,7 @@
     "stage-2"
   ],
   "plugins": [
+    "react-hot-loader/babel",
     "transform-object-rest-spread"
-  ],
-  "env": {
-    "development": {
-      "plugins": [
-        [
-          "react-transform",
-          {
-            "transforms": [
-              {
-                "transform": "livereactload/babel-transform",
-                "imports": [
-                  "react"
-                ]
-              }
-            ]
-          }
-        ]
-      ]
-    }
-  }
+  ]
 }
