--- a/package.json
+++ b/package.json
@@ -9,51 +9,39 @@
   "license": "UNLICENSED",
   "scripts": {
     "test": "eslint src gulpfile.js",
-    "start": "gulp dev",
-    "dist": "NODE_ENV=production gulp dist"
-  },
-  "eslintConfig": {
-    "extends": "knoword/react"
+    "start": "webpack-dev-server --progress",
+    "build": "NODE_ENV=production webpack -p --progress"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browser-sync": "^2.16.0",
-    "browserify": "^13.1.0",
-    "connect-history-api-fallback": "^1.3.0",
-    "del": "^2.2.2",
-    "envify": "^4.0.0",
     "eslint": "^3.5.0",
     "eslint-config-knoword": "^1.9.0",
-    "event-stream": "^3.3.4",
-    "gulp": "^3.9.1",
-    "gulp-less": "^3.1.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "less-plugin-autoprefix": "^1.5.1",
-    "less-plugin-clean-css": "^1.5.1",
-    "livereactload": "^3.1.1",
+    "favicons-webpack-plugin": "^0.0.7",
+    "html-webpack-plugin": "^2.28.0",
     "react-proxy": "^1.1.8",
-    "run-sequence": "^1.2.2",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "react-svg-loader": "^1.1.1",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {
     "bytes": "^2.4.0",
     "classnames": "^2.2.5",
-    "core-js": "^2.4.1",
     "jwt-decode": "^2.1.0",
     "mime": "^1.3.4",
     "moment": "^2.17.1",
     "planet-css": "^1.1.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-hot-loader": "next",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
@@ -61,7 +49,6 @@
     "sentence-case": "^2.1.0",
     "shortid": "^2.2.8",
     "uniqid": "^4.1.1",
-    "upper-case-first": "^1.1.2",
-    "whatwg-fetch": "^2.0.1"
+    "upper-case-first": "^1.1.2"
   }
 }
