--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
   "dependencies": {
     "bytes": "^2.4.0",
     "classnames": "^2.2.5",
+    "create-react-class": "^15.5.3",
     "jwt-decode": "^2.1.0",
     "mime": "^1.3.4",
     "moment": "^2.17.1",
     "planet-css": "^1.1.1",
+    "prop-types": "^15.5.10",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-hot-loader": "next",
