--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mime": "^1.3.4",
     "moment": "^2.17.1",
     "planet-css": "^1.1.1",
+    "polished": "^1.1.3",
     "prop-types": "^15.5.10",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
@@ -50,6 +51,7 @@
     "redux-undo": "^0.6.1",
     "sentence-case": "^2.1.0",
     "shortid": "^2.2.8",
+    "styled-components": "^2.0.0",
     "uniqid": "^4.1.1",
     "upper-case-first": "^1.1.2"
   }
